--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
         <script src="LTreeGenerator.js"></script>
+        <script src="Snowflake.js"></script>
         <script src="sketch.js"></script>
     </head>
 
