--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
+        <script src="Rule.js"></script>
         <script src="LTreeGenerator.js"></script>
         <script src="Snowflake.js"></script>
         <script src="sketch.js"></script>
